Fixed more spacing

--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@
     max-width: 100%;
     height: auto;
     margin-top: 3%;
-    margin-bottom: 3%;
+    margin-bottom: 5%;
     margin-right: 5%;
 }
 
